# agent-talk

./: .gitignore  .gitmodules  EXPERT_HANDOFF.md  EXPERT_HANDOFF.template.md  FIGURE_BUILD_NOTES.md  HANDOFF_SPEC.md  LICENSE  MERMAID_SEQUENCE_DIAGRAMS.md  README.md  agents.md  final_runs_raw.txt  handoff_for_expert.txt  paper_improvement_notes.md  paper_source.tex  paper_source.txt  pyproject.toml
agent_talk_beta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/: handoff.md
configs/: ablations.yaml  base.yaml
data/: 20251008T151417Z_cache.jsonl
diagrams/: seq_certtalk.mmd  seq_greedyprobe.mmd  seq_respondermincut.mmd  seq_sendall.mmd
experiments/: README.md
runs/: 20251008T151417Z_certtalk.jsonl  20251008T151417Z_cutgrow.jsonl  20251008T151417Z_greedyprobe.jsonl  20251008T151417Z_sendall.jsonl  20251008T151417Z_summary.csv  20251008T173026Z_certtalk.jsonl  20251008T173537Z_sendall.jsonl  20251008T173601Z_greedyprobe.jsonl  20251008T173800Z_cutgrow.jsonl  20251008T173835Z_summary.csv  20251009T133808Z_certtalk.jsonl  20251009T133837Z_cutgrow.jsonl  20251009T134755Z_summary.csv  20251009T141020Z_greedyprobe.jsonl  20251009T141035Z_summary.csv  20251009T141144Z_certtalk.jsonl  20251009T141202Z_summary.csv  20251009T141244Z_sendall.jsonl  20251009T141248Z_respondmincut.jsonl  20251009T141250Z_summary.csv  20251009T165507Z_greedyprobe.jsonl  20251009T165537Z_summary.csv  20251009T201009Z_certtalk.jsonl  20251009T201024Z_sendall.jsonl  20251009T201034Z_greedyprobe.jsonl  20251009T201043Z_respondmincut.jsonl  20251009T201059Z_summary.csv
(+47 files in other folders)
